# dashboard-backend

./: .gitignore  Cargo.toml  Dockerfile  notes.md  secrets.json  template.html
src/: backup.rs  consts.rs  filestreamer.rs  google.rs  macros.rs  main.rs
src/routes/: event.rs  mod.rs  oauth.rs  patient.rs  session.rs  settings.rs  sse.rs
src/state/: mod.rs  patient.rs  session.rs  state.rs  user.rs
