[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-lab = "0.19.1"
chrono = "0.4.31"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.20"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "time"] }
uuid = "1.4.1"
