[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = { version="4.4.0", features=["rustls-0_21"] }
actix-web-actors = "4.2.0"
actix-web-lab = "0.20.1"
async-trait = "0.1.74"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.11.0"
futures = "0.3.28"
futures-util = "0.3.28"
headless_chrome = "1.0.9"
include_dir = "0.7.3"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "native-tls"] }
rng = "0.1.0"
rustls = "0.21.10"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "time", "process"] }
tokio-stream = "0.1.14"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
